Thu Nov 22 08:13:51 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* tests/api_replicate.cc: Pass 'true' or 'false' for 'bool' parameter,
	  not '0' or '1' (especially confusing as the two previous parameters
	  were integers which were often 0 or 1...)

Wed Nov 21 04:58:58 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog.

Tue Nov 13 10:07:19 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* bin/xapian-replicate.cc,net/replicatetcpclient.cc,
	  net/replicatetcpclient.h: Add --full-copy option to xapian-replicate.
	* tests/api_replicate.cc: New testcase replicate6 which tests the same
	  code path used by 'xapian-replicate --full-copy'.

Tue Nov 13 09:45:23 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* tests/api_replicate.cc: Use '++' instead of '+= 1'.  Drop superfluous
	  'return;' at end of function returning void.

Tue Nov 13 09:38:16 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* tests/harness/unixcmds.cc: Tweak to avoid default initialisation of
	  string.

Tue Nov 13 03:51:01 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* include/xapian/unicode.h: GCC 4.6.3 doesn't optimise the asr idiom
	  either.  Add links to the PR I filed and the GCC documentation that
	  signed right shift does sign extension.

Sat Nov 10 08:51:00 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* api/leafpostlist.cc,matcher/multiandpostlist.cc: Improved fix for
	  #590 - count all matching LeafPostList objects with a Weight object
	  rather than trying to prune at the MultiAndPostList level based on
	  max_wt (if wdf is always zero for a term, BM25 gives max_wt of 0,
	  which leads to us never counting that subquery.
	* tests/api_percentages.cc: Add regression test topercent7.

Sat Nov 10 08:12:33 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk: