@@ -55,9 +55,10 @@ static void show_usage() {
 "                      (default: "STRINGIZE(DEFAULT_INTERVAL)")\n"
 "  -r, --reader-time=N wait N seconds to allow readers time to close before\n"
 "                      applying repeated changesets (default: "STRINGIZE(READER_CLOSE_TIME)")\n"
-"  -f, --force-copy    force a full copy of the database to be sent rather than\n"
-"                      incremental changes (usually used with --one-shot)\n"
+"  -f, --force-copy    force a full copy of the database to be sent (and then\n"
+"                      replicate as normal)\n"
 "  -o, --one-shot      replicate only once and then exit\n"
+"  -q, --quiet         only report errors\n"
 "  -v, --verbose       be more verbose\n"
 "  --help              display this help and exit\n"
 "  --version           output version information and exit" << endl;
@@ -66,7 +67,7 @@ static void show_usage() {
 int
 main(int argc, char **argv)
 {
-    const char * opts = "h:p:m:i:r:ofv";
+    const char * opts = "h:p:m:i:r:ofqv";
     const struct option long_opts[] = {
 	{"host",	required_argument,	0, 'h'},
 	{"port",	required_argument,	0, 'p'},
@@ -75,6 +76,7 @@ main(int argc, char **argv)
 	{"reader-time",	required_argument,	0, 'r'},
 	{"one-shot",	no_argument,		0, 'o'},
 	{"force-copy",	no_argument,		0, 'f'},
+	{"quiet",	no_argument,		0, 'q'},
 	{"verbose",	no_argument,		0, 'v'},
 	{"help",	no_argument, 0, OPT_HELP},
 	{"version",	no_argument, 0, OPT_VERSION},
@@ -86,7 +88,7 @@ main(int argc, char **argv)
     string masterdb;
     int interval = DEFAULT_INTERVAL;
     bool one_shot = false;
-    bool verbose = false;
+    enum { NORMAL, VERBOSE, QUIET } verbosity = NORMAL;
     bool force_copy = false;
     int reader_close_time = READER_CLOSE_TIME;
 
@@ -114,8 +116,11 @@ main(int argc, char **argv)
 	    case 'o':
 		one_shot = true;
 		break;
+	    case 'q':
+		verbosity = QUIET;
+		break;
 	    case 'v':
-		verbose = true;
+		verbosity = VERBOSE;
 		break;
 	    case OPT_HELP:
 		cout << PROG_NAME" - "PROG_DESC"\n\n";
@@ -155,30 +160,34 @@ main(int argc, char **argv)
 
     while (true) {
 	try {
-	    if (verbose) {
+	    if (verbosity == VERBOSE) {
 		cout << "Connecting to " << host << ":" << port << endl;
 	    }
 	    ReplicateTcpClient client(host, port, 10000);
-	    if (verbose) {
+	    if (verbosity == VERBOSE) {
 		cout << "Getting update for " << dbpath << " from "
 		     << masterdb << endl;
 	    }
 	    Xapian::ReplicationInfo info;
 	    client.update_from_master(dbpath, masterdb, info,
 				      reader_close_time, force_copy);
-	    if (verbose) {
-		cout << "Update complete: " <<
-			info.fullcopy_count << " copies, " <<
-			info.changeset_count << " changesets, " <<
-			(info.changed ? "new live database" : "no changes to live database") <<
-			endl;
+	    if (verbosity == VERBOSE) {
+		cout << "Update complete: "
+		     << info.fullcopy_count << " copies, "
+		     << info.changeset_count << " changesets, "
+		     << (info.changed ? "new live database"
+				      : "no changes to live database")
+		     <<	endl;
+	    }
+	    if (verbosity != QUIET) {
 		if (info.fullcopy_count > 0 && !info.changed) {
 		    cout <<
-"Replication using a full copy failed. This is usually due to changes being\n"
-"made at remote end too frequently. Ensure that sufficient changesets are\n"
-"present at remote end by setting XAPIAN_MAX_CHANGESETS" << endl;
+"Replication using a full copy failed.  This usually means that the master\n"
+"database is changing too frequently.  Ensure that sufficient changesets are\n"
+"present by setting XAPIAN_MAX_CHANGESETS on the master." << endl;
 		}
 	    }
+	    force_copy = false;
 	} catch (const Xapian::NetworkError &error) {
 	    // Don't stop running if there's a network error - just log to
 	    // stderr and retry at next timeout.  This should make the client
